# carla_vehicle

./: CMakeLists.txt  README.md  package.xml
carla_vehicle/: vehicle_ros_bridge.py  vehicle_world.py
carla_vehicle/management/: carla_traffic_manager.py
carla_vehicle/planning/: awareness_sim_node.py
carla_vehicle/sensor/: gnss_sensor.py  imu_sensor.py  lidar_sensor.py  obu_sensor.py  radar_sensor.py  rgb_camera_sensor.py  semantic_camera_sensor.py  semantic_lidar_sensor.py
config/: global_params.yaml  sensor_params.yaml
config/control/: carla_ackermann_params.yaml  carla_vehicle_teleop.yaml
config/localization/: ukf_vehicle.yaml
include/carla_vehicle/: ackermann_wheel_odometry_node.hpp  front_axis_transform_node.hpp  geo_converter_node.hpp
launch/: carla_vehicle.launch.py  vehicle_node.launch.py
launch/localization/: front_axis_transform_node.launch.py  geo_converter_node.launch.py  ukf.launch.py  wheel_odometry_node.launch.py
launch/visualization/: carla_vehicle_description.launch.py
rviz/: carla_vehicle.rviz
scripts/: camera_pose.py  carla_ackermann_node.py  carla_keyboard_control_node.py  vehicle_node.py
src/: ackermann_wheel_odometry_node.cpp  front_axis_transform_node.cpp  geo_converter_node.cpp  image_transport_node.cpp
