<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_vehicle</name>
  <version>1.0.0</version>
  <description>ROS Package to bidge with Carla simulator and generate synthetic data from the vehicle</description>
  <author email="dayaguec@inf.uc3m.es">David Yagüe-Cuevas</author>
  <maintainer email="dayaguec@inf.uc3m.es">David Yague-Cuevas</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>yaml-cpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vehicle_interfaces</depend>
  <depend>perception_interfaces</depend>
  <depend>carla_interfaces</depend>
  <depend>awareness_interfaces</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ad_map_access</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
